--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="carousel-container">
+        <div class="carousel" id="carousel"></div>
+        <button class="carousel-button prev" id="prev">‹</button>
+        <button class="carousel-button next" id="next">›</button>
+    </div>
     <script src="./js/script.js" type="text/javascript"></script>
 </body>
 </html>
