[UPD] Added css and modified js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div class="carousel-container">
-        <div class="carousel" id="carousel"></div>
+        <div class="main-image">
+            <img id="main-img" src="img/01.webp" alt="Marvel's Spiderman Miles Morale">
+            <h2 id="main-title">Marvel's Spiderman Miles Morale</h2>
+            <p id="main-text">Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</p>
+        </div>
+        <div class="thumbnails">
+            
+        </div>
         <button class="carousel-button prev" id="prev">‹</button>
         <button class="carousel-button next" id="next">›</button>
     </div>
